# productai-python-sdk

./: .bumpversion.cfg  .gitignore  .travis.yml  README.rst  pyproject.toml  setup.py  tox.ini
productai/: __init__.py  bad_case.py
tests/: __init__.py  test_api.py  test_bad_case.py  test_utils.py
